// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedOverlayV2 — a11y visual checks (light & dark) matches accessibility + contrast expectations in dark mode (snapshot) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "flex": 1,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingTop": 24,
          },
          {
            "backgroundColor": "#1A3328",
            "borderRadius": 12,
            "elevation": 3,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "paddingBottom": 12,
              "paddingHorizontal": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#F8FAF9",
                "fontFamily": "PlusJakartaSans-Bold",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 25,
              },
              undefined,
            ]
          }
        >
          New Log
        </Text>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
                "marginTop": 12,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Log"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E5540",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Log
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="To-Do"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                To-Do
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Habit"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Habit
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
                "marginTop": 8,
                "paddingHorizontal": 0,
              },
              {
                "marginTop": 12,
              },
            ]
          }
        >
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "justifyContent": "center",
                  "minHeight": 44,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Tag Journal"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Journal
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "justifyContent": "center",
                  "minHeight": 44,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Tag List"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                List
              </Text>
            </View>
          </View>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "paddingBottom": 24,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              [
                {
                  "paddingHorizontal": 16,
                },
                undefined,
              ]
            }
          >
            <TextInput
              accessibilityLabel="Overlay content input"
              autoFocus={true}
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Drop your thought…"
              placeholderTextColor="#6A6F76"
              style={
                [
                  {
                    "fontSize": 16,
                    "lineHeight": 22,
                    "maxHeight": 360,
                    "minHeight": 120,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  },
                  {
                    "backgroundColor": "#1A3328",
                    "borderColor": "#E0C47A",
                    "borderWidth": 2,
                    "color": "#0E1116",
                  },
                ]
              }
              textAlignVertical="top"
              value=""
            />
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "gap": 8,
                    "marginTop": 12,
                  },
                  {
                    "flexWrap": "wrap",
                    "marginTop": 12,
                  },
                ]
              }
            />
          </View>
        </View>
      </RCTScrollView>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 8,
              },
            ],
          }
        }
      >
        <View
          style={
            [
              {
                "paddingBottom": 8,
                "paddingHorizontal": 16,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAF9",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 17.5,
                },
                undefined,
              ]
            }
          >
            Details
          </Text>
          <View
            style={
              [
                {
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="Select person"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Select person
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "gap": 8,
                    "marginTop": 8,
                  },
                  {
                    "alignItems": "center",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Add reminder"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#121716",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "height": 36,
                      "justifyContent": "center",
                      "opacity": 1,
                      "paddingHorizontal": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#F8FAF9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 22.4,
                      },
                      {
                        "color": "#F8FAF9",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Add reminder
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "marginTop": 8,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#ECEBEA",
                      "borderRadius": 24,
                      "borderWidth": 1,
                      "opacity": 1,
                      "paddingHorizontal": 18,
                      "paddingVertical": 10,
                    }
                  }
                  testID="scope-selector"
                >
                  <Text
                    style={
                      {
                        "color": "#0E1A1A",
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    Unassigned
                     ▾
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "marginTop": 8,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Plain"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E5540",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Plain
              </Text>
            </View>
            <View
              accessibilityLabel="Checkboxes"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Checkboxes
              </Text>
            </View>
            <View
              accessibilityLabel="Bullet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#121716",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#F8FAF9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#F8FAF9",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Bullet
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Add details"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121716",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 0,
                "flexDirection": "row",
                "gap": 8,
                "height": 36,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 12,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAF9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#F8FAF9",
                  "fontSize": 14,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Add details
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 8,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            {
              "borderTopColor": "#E7E2D9",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121716",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 0,
                "flexDirection": "row",
                "gap": 8,
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAF9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#F8FAF9",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Cancel
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityLabel="Save"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2E5540",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "gap": 8,
                  "height": 44,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#F8FAF9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 22.4,
                  },
                  {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`UnifiedOverlayV2 — a11y visual checks (light & dark) matches accessibility + contrast expectations in light mode (snapshot) 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "flex": 1,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingTop": 24,
          },
          {
            "backgroundColor": "#F9F6F1",
            "borderRadius": 12,
            "elevation": 3,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 8,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "paddingBottom": 12,
              "paddingHorizontal": 16,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            [
              {
                "color": "#0E1116",
                "fontFamily": "PlusJakartaSans-Bold",
                "fontSize": 20,
                "fontWeight": "600",
                "lineHeight": 25,
              },
              undefined,
            ]
          }
        >
          New Log
        </Text>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
                "marginTop": 12,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Log"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E5540",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Log
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="To-Do"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                To-Do
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "minHeight": 40,
                  "paddingHorizontal": 12,
                  "paddingVertical": 8,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Habit"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Habit
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flexDirection": "row",
                "gap": 8,
                "marginTop": 8,
                "paddingHorizontal": 0,
              },
              {
                "marginTop": 12,
              },
            ]
          }
        >
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "justifyContent": "center",
                  "minHeight": 44,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Tag Journal"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Journal
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {},
                {
                  "borderRadius": 8,
                  "justifyContent": "center",
                  "minHeight": 44,
                  "paddingHorizontal": 12,
                  "paddingVertical": 4,
                },
              ]
            }
          >
            <View
              accessibilityLabel="Tag List"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                List
              </Text>
            </View>
          </View>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "paddingBottom": 24,
          }
        }
        keyboardShouldPersistTaps="handled"
      >
        <View>
          <View
            style={
              [
                {
                  "paddingHorizontal": 16,
                },
                undefined,
              ]
            }
          >
            <TextInput
              accessibilityLabel="Overlay content input"
              autoFocus={true}
              multiline={true}
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Drop your thought…"
              placeholderTextColor="#6A6F76"
              style={
                [
                  {
                    "fontSize": 16,
                    "lineHeight": 22,
                    "maxHeight": 360,
                    "minHeight": 120,
                    "paddingHorizontal": 16,
                    "paddingVertical": 12,
                  },
                  {
                    "backgroundColor": "#F9F6F1",
                    "borderColor": "#E0C47A",
                    "borderWidth": 2,
                    "color": "#0E1116",
                  },
                ]
              }
              textAlignVertical="top"
              value=""
            />
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "gap": 8,
                    "marginTop": 12,
                  },
                  {
                    "flexWrap": "wrap",
                    "marginTop": 12,
                  },
                ]
              }
            />
          </View>
        </View>
      </RCTScrollView>
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 8,
              },
            ],
          }
        }
      >
        <View
          style={
            [
              {
                "paddingBottom": 8,
                "paddingHorizontal": 16,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "lineHeight": 17.5,
                },
                undefined,
              ]
            }
          >
            Details
          </Text>
          <View
            style={
              [
                {
                  "marginTop": 8,
                },
                undefined,
              ]
            }
          >
            <View
              accessibilityLabel="Select person"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Select person
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                    "gap": 8,
                    "marginTop": 8,
                  },
                  {
                    "alignItems": "center",
                  },
                ]
              }
            >
              <View
                accessibilityLabel="Add reminder"
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "transparent",
                      "borderRadius": 12,
                      "borderWidth": 0,
                      "flexDirection": "row",
                      "gap": 8,
                      "height": 36,
                      "justifyContent": "center",
                      "opacity": 1,
                      "paddingHorizontal": 12,
                    },
                    false,
                  ]
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "#0E1116",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "lineHeight": 22.4,
                      },
                      {
                        "color": "#0E1116",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Add reminder
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "marginTop": 8,
                  },
                  undefined,
                ]
              }
            >
              <View>
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    {
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#ECEBEA",
                      "borderRadius": 24,
                      "borderWidth": 1,
                      "opacity": 1,
                      "paddingHorizontal": 18,
                      "paddingVertical": 10,
                    }
                  }
                  testID="scope-selector"
                >
                  <Text
                    style={
                      {
                        "color": "#0E1A1A",
                        "fontSize": 16,
                        "fontWeight": "600",
                      }
                    }
                  >
                    Unassigned
                     ▾
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "flexDirection": "row",
                  "gap": 8,
                  "marginTop": 8,
                },
                {
                  "alignItems": "center",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Plain"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#2E5540",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#FFFFFF",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Plain
              </Text>
            </View>
            <View
              accessibilityLabel="Checkboxes"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Checkboxes
              </Text>
            </View>
            <View
              accessibilityLabel="Bullet"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "transparent",
                    "borderRadius": 12,
                    "borderWidth": 0,
                    "flexDirection": "row",
                    "gap": 8,
                    "height": 36,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingHorizontal": 12,
                  },
                  false,
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#0E1116",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "lineHeight": 22.4,
                    },
                    {
                      "color": "#0E1116",
                      "fontSize": 14,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Bullet
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            {
              "alignItems": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Add details"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 0,
                "flexDirection": "row",
                "gap": 8,
                "height": 36,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 12,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#0E1116",
                  "fontSize": 14,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Add details
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        />
      </View>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "gap": 8,
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            },
            {
              "borderTopColor": "#E7E2D9",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 0,
                "flexDirection": "row",
                "gap": 8,
                "height": 44,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 16,
              },
              false,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0E1116",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 22.4,
                },
                {
                  "color": "#0E1116",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Cancel
          </Text>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        />
        <View
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            accessibilityLabel="Save"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "#2E5540",
                  "borderColor": "transparent",
                  "borderRadius": 12,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "gap": 8,
                  "height": 44,
                  "justifyContent": "center",
                  "opacity": 0.5,
                  "paddingHorizontal": 16,
                },
                false,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#0E1116",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 22.4,
                  },
                  {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                ]
              }
            >
              Save
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
